tests/ui/feature-gates/feature-gate-export.rs
#![crate_type="dylib"]

#[export]
//~^ ERROR the `#[export]` attribute is an experimental feature
pub mod a {}
